Migration towards removing Atlan static content and the getDefaultClient() pattern
Signed-off-by: Christopher Grote <cmgrote@users.noreply.github.com>